Card matching structure finished

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header>
         <div class="header__container">
           <button>Start!</button>
-          <div>Score:</div>
+          <div id="jsAttemtsCounter">Attempts:</div>
         </div>
       </header>
       <div class="game-board" id="jsGameboard">
