Done! for now...

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
               type="text"
               placeholder="Enter Your Name"
               name="playerName"
+              required
             />
             <button id="jsEnterName" type="submit">Enter</button>
           </form>
@@ -47,6 +48,9 @@
         </div>
       </main>
     </div>
+
+    <div id="onlyFullscreen">This game only support Fullscreen mode!</div>
+
     <script src="js/index.js"></script>
   </body>
 </html>
